Remembering to update is a bit difficult. Color fixes were done and the UI overall looks less dumb by using box shadows correctly. I'm learning and this is starting to click! I also found that I can change the scrollbar and will be definitely be abusing that power for later projects

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,23 @@ html:root {
     
 }
 
+html::-webkit-scrollbar {
+    width: .75vw;
+  }
+html::-webkit-scrollbar-thumb {
+    background-color: #6073eeda;
+    border-radius: 12px;
+  }
+/* .dark-theme html::-webkit-scrollbar-thumb {
+    background-color: #34037494;
+  } */
+html::-webkit-scrollbar-track {
+    background-color: #57ebeb52;
+  }
+
+
+
+
 body {
     background-color: #57ebeb52;
     position: relative;
@@ -44,8 +61,8 @@ input:focus{
     outline: none;
 }
 
-input .input2,
-textarea .input2 {
+input,
+textarea {
   width: 100%;
   background-color: #2b2638;
   color: white;
@@ -117,7 +134,6 @@ button {
     cursor: pointer;
     background-color: #3646acda;
     color: white;
-    font-size: 20px;
     border: none;
     border-radius: 50px;
     box-shadow: 0px 4px 12px #050b4183;
@@ -197,7 +213,7 @@ Hamburger Menu
 
 .menu__backdrop {
     position: absolute;
-    background-color: #4e4e4ef6;
+    background-color: #6d7acacc;
     top: 0;
     left: 0;
     right: 0;
@@ -211,13 +227,34 @@ Hamburger Menu
     visibility: hidden;
     transition: all 300ms ease;
     transform: translateX(-100%);
+    border: solid 1px #302d2dcc;
 }
+
+.menu__styling {
+    position: absolute;
+    background-color: #7890c1c2;
+    border-radius: 0 8px 8px 0;
+    box-shadow: 0px 0px 32px 24px #7890c1c2;
+    top: 3%;
+    bottom: 3%;
+    /* padding: 0px 16px; */
+    z-index: 101;
+    /* border: double 4px #302d2dcc; */
+}
+
 
 .dark-theme .menu__backdrop {
     background-color: #15162cf6;
-    
 }
 
+.dark-theme .menu__styling {
+    background-color: #34037494;
+    box-shadow: 0px 0px 32px 24px #34037494;
+}
+
+.dark-theme .menu__link {
+    color: white;
+}
 .menu--open {
     max-height: 100vh;
     overflow-y: hidden;
@@ -239,32 +276,54 @@ Hamburger Menu
     left: 4px;
     top: 4px;
     padding: 8px;
+    color: #000000cc;
+    z-index: 102;
+}
+
+
+.btn__menu .fa-burger {
+    font-size: 20px;
+}
+
+.btn__menu .fa-times {
+    font-size: 24px;
+}
+
+.dark-theme .btn__menu .fa-burger {
     color: white;
 }
+.dark-theme .btn__menu .fa-times {
+    color: white;
+}
+
 
 .menu__list {
     display: flex;
     flex-direction: column;
-    padding-top: 52px;
+    font-size: 16px;
+    /* padding-top: 52px; */
 
 }
 
 .menu__links {
-    padding: 8px 0;
+    padding: 16px 12px;
 }
 
 .menu__link {
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
-.menu__style {
-    z-index: 101;
-}
 
-.menu__line {
+
+/* .menu__line {
     background-color: #252347;
+    border: double 2px #302d2dcc;
+    border-radius: px;
+    z-index: 102;
     
-}
+} 
+
+*/
 
 /*
 
@@ -307,6 +366,10 @@ NAVIGATION
     font-weight: 500;
     color: black;
     transition: color 300ms ease;
+}
+
+.nav__links .fa-burger {
+    color: #000;
 }
 
 .fa-moon,
@@ -575,12 +638,12 @@ MODAL
   
   .modal {
     position: absolute;
-    top: 50%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 90%;
-    max-width: 1100px;
-    height: 700px;
+    width: 80%;
+    max-width: 1200px;
+    height: 800px;
     border-radius: 20px;
     overflow: hidden;
     display: flex;
@@ -592,6 +655,7 @@ MODAL
   .modal__para {
     background-color: #e7e0ed79;
     padding: 12px;
+    font-size: 16px;
     border-radius: 10px;
   }
   
@@ -611,13 +675,13 @@ MODAL
   }
   
   .modal__about {
-    background-color: rgb(245, 245, 245);
+    background-color: #cbf5f5;
     color: #2b2638;
     transform: translateX(-110%);
   }
   
   .modal__contact {
-    background-color: #2b2638;
+    background-color: #6073ee;
     color: white;
     transform: translateX(110%);
   }
@@ -697,7 +761,7 @@ MODAL
   }
   
   .form__submit {
-    background-color: #6a36e2;
+    background-color: #3646acda;
     border: 2px solid #6a36e2;
     color: white;
     font-size: 20px;
@@ -1112,6 +1176,13 @@ DARK THEME
 .dark-theme .post__username:hover {
     color: #0a66c2;
 }
+
+.dark-theme .contents,
+.dark-theme .content-remains {
+    background-color: #29339380;
+    box-shadow: 0px 0px 32px 12px #29339380;
+}
+
 
 
 @media (max-width: 1024px) {
@@ -1573,19 +1644,29 @@ CONTENTS
 
 .contents__row {
     padding: 0 20px;
-    background-color: #2523473d;
+    background-color: #4b43e23d;
     display: flex;
-    box-shadow: 0 0 16px 12px #2b8eb63d;
+    box-shadow: 0 0 16px 12px #4b43e23d;
     border-radius: 12px;
+    margin: 0 12px;
     /* background-image: linear-gradient(to bottom, 0% #2523473d, 100% #57ebeb52); */
     
 }
 
+.contents__title {
+    padding-top: 0;
+    padding-bottom: 12px;
+}
+
+.contents__second-title {
+    padding: 12px 0;
+}
+
 .contents__title,
 .contents__second-title {
-    font-size: 28px;
+    font-size: 32px;
     font-weight: 700;
-    padding: 12px 0;
+    padding-left: 24px;
     letter-spacing: .02em;
     transition: color 450ms ease;
 }
@@ -1598,8 +1679,7 @@ CONTENTS
 .contents__box {
     display: flex;
     flex-direction: column;
-    padding-right: 16px;
-    padding: 24px 0;
+    padding: 12px 24px 40px 0;
     width: 75%;
 }
 
@@ -1614,8 +1694,13 @@ CONTENTS
 
 .contents {
     display: flex;
-    padding: 8px;
+    padding: 28px;
     padding-right: 24px;
+    background-color: #b6e9e980;
+    box-shadow: 0px 0px 32px 12px #b6e9e980;
+    border-radius: 4px;
+    
+
 }
 
 .content {
@@ -1780,7 +1865,7 @@ CONTENT RANKING
     text-align: center;
     font-weight: 700;
     padding: 12px 20px;
-    border-radius: 4px 4px 8px 8px;
+    border-radius: 0px 0px 12px 12px;
 }
 
 .contents__rank-box {
@@ -1872,15 +1957,18 @@ CONTENT RANKING
 .content-remains {
     display: flex;
     flex-wrap: wrap;
-    padding-right: 24px;
+    padding: 40px 24px;
+    background-color: #b6e9e980;
+    box-shadow: 0px 0px 40px 24px #b6e9e980;
     justify-content: center;
+    border-radius: 4px;
 }
 
 .content2 {
     display: flex;
     flex-direction: column;
     margin: 8px 6px;
-    box-shadow: 0px 0px 32px 12px #1b263b5d;
+    box-shadow: 0px 0px 32px 12px #0825685d;
     flex-basis: calc(100% / 6);
 }
 
@@ -1917,3 +2005,30 @@ CONTENT RANKING
 }
 
 
+/*
+
+@MEDIA
+
+*/
+
+/* @media (max-width: 768px) {
+    .modal--open .modal {
+        height: 100%;
+      }
+
+    .modal{
+        top: 0;
+        left: 0;
+        height: auto;
+        overflow-y: auto;
+        transform: none;
+        width: 80%;
+        flex-direction: column-reverse;
+        border-radius: 0;
+    }  
+
+    .modal__half {
+        width: 80%;
+      }
+    
+} */
